--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -1,34 +1,27 @@
 @charset "UTF-8";
-
 #registForm {
-	width : 500px;
-	height : 610px;
-	border : 3px solid black;
-	margin : auto;
-	
+	width: 500px;
+	height: 610px;
+	border: 1px solid hotpink;
+	margin: auto;
 }
 
 h2 {
-	text-align : center
-	}
-	
-table {
-	margin:auto;
-	width:450px;
-	
-}	
-.td_left{
-	width : 150px;
-	background : hotpink;
-	
+	text-align: center;
 }
 
-.td_right {
-	width : 300px;
-	background : lightpink;
-	
+table {
+	margin: auto;
+	width: 450px;
+}
+
+.td_left {
+	width: 150px;
+	background: #ef94cf;
+	text-align: right;
+	padding-right: 10px;
 }
 
 #commandCell {
-	text-align : center;
+	text-align: center;
 }
